--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -1,4 +1,11 @@
-.projects__container {
+  .project_title {
+    gap: 2.5rem;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+  
+  .projects__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2.5rem;
@@ -16,6 +23,8 @@
   .project__item:hover {
     border-color: var(--color-primary-variant);
     background: transparent;
+    transform: scale(1.05);
+    transition: background-color 0.3s, transform 0.3s ease-in-out;
   }
   
   .project__item-image {
@@ -23,42 +32,53 @@
     overflow: hidden;
   }
   
-  .project__item-image img {
-    width: 100%;
-    object-fit: cover;
-  }
+.project__item-image img {
+  width: 100%;
+  object-fit: cover;
+}
   
-  .project__item h3 {
-    margin: 1.2rem 0 0.5rem;
-    font-size: 1.5rem;
-  }
+.project__item h3 {
+  margin: 1.2rem 0 0.5rem;
+  font-size: 1.5rem;
+}
   
-  .project__item p {
-    margin-bottom: 1rem;
-    font-size: 0.9rem;
-    color: var(--color-light);
-  }
+.project__item p {
+  margin-bottom: 1rem;
+  font-size: 0.9rem;
+  color: var(--color-light);
+}
   
-  .project__item-cta {
-    display: flex;
-    gap: 1rem;
-  }
+.project__item-cta {
+  display: flex;
+  gap: 1rem;
+}
   
-  .project__item-cta .btn {
-    padding: 0.6rem 1.2rem;
-  }
+
+.project__item-cta {
+  display: flex; 
+  gap: 1rem; 
+  justify-content: center; 
+   margin-top: 1rem; 
+}
   
-  @media screen and (max-width: 1024px) {
-    .projects__container {
-      grid-template-columns: 1fr 1fr;
-      gap: 2rem;
-    }
-  }
+.project__item-cta .btn {
+  padding: 0.6rem 1.2rem; 
+  text-align: center; 
+  font-size: 0.9rem; 
+  border-radius: 5px; 
+}
   
-  @media screen and (max-width: 600px) {
-    .projects__container {
-      grid-template-columns: 1fr;
-      gap: 1.5rem;
-    }
+@media screen and (max-width: 1024px) {
+  .projects__container {
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
   }
+}
   
+@media screen and (max-width: 600px) {
+  .projects__container {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+  }
+}
+
