--- a/client/src/components/Skills/Skills.css
+++ b/client/src/components/Skills/Skills.css
@@ -1,48 +1,54 @@
+.skills_title {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
 .skills__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 2rem;
   }
   
-  .skills__container > div {
-    background: var(--color-bg-variant);
-    padding: 2.4rem 5rem;
-    border-radius: 2rem;
-    border: 1px solid transparent;
-    transition: var(--transition);
-  }
+.skills__container > div {
+  background: var(--color-bg-variant);
+  padding: 2.4rem 5rem;
+  border-radius: 2rem;
+  border: 1px solid transparent;
+  transition: var(--transition);
+}
   
-  .skills__container > div:hover {
-    background: transparent;
-    border-color: var(--color-primary-variant);
-    cursor: default;
-  }
+.skills__container > div:hover {
+  background: transparent;
+  border-color: var(--color-primary-variant);
+  cursor: default;
+}
   
-  .skills__container > div h3 {
-    text-align: center;
-    margin-bottom: 2rem;
-    color: var(--color-primary);
-  }
+.skills__container > div h3 {
+  text-align: center;
+  margin-bottom: 2rem;
+  color: var(--color-primary);
+}
   
-  .skills__content {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    row-gap: 2rem;
-  }
+.skills__content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 2rem;
+}
   
-  .skills__details {
-    display: flex;
-    gap: 1rem;
-  }
+.skills__details {
+  display: flex;
+  gap: 1rem;
+}
   
-  .skills__details h4 {
-    font-size: 1.1rem;
-  }
+.skills__details h4 {
+  font-size: 1.1rem;
+}
   
-  .skills__details small {
-    color: var(--color-light);
-    font-size: 0.9rem;
-  }
+.skills__details small {
+  color: var(--color-light);
+  font-size: 0.9rem;
+}
   
   /* ================ MEDIA QUERIES (MEDIUM DEVICES) ================= */
   @media screen and (max-width: 1024px) {
